[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/right_palette.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/left_palette.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/ball.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/separator.png" type="Texture" id=5]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="leftPlayer" type="Sprite" parent="."]
position = Vector2( 40, 200 )
texture = ExtResource( 3 )

[node name="rightPlayer" type="Sprite" parent="."]
position = Vector2( 600, 200 )
texture = ExtResource( 2 )

[node name="ball" type="Sprite" parent="."]
position = Vector2( 320, 200 )
texture = ExtResource( 4 )

[node name="separator" type="Sprite" parent="."]
position = Vector2( 320, 200 )
texture = ExtResource( 5 )

[node name="leftScore" type="RichTextLabel" parent="."]
margin_left = 18.372
margin_top = 15.0316
margin_right = 58.372
margin_bottom = 55.0316
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rightScore" type="RichTextLabel" parent="."]
margin_left = 581.224
margin_top = 18.372
margin_right = 621.224
margin_bottom = 58.372
__meta__ = {
"_edit_use_anchors_": false
}
